--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@flydotio/dockerfile": "^0.5.9",
     "@stylistic/eslint-plugin-js": "^2.9.0",
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
